@@ -583,6 +583,8 @@ Bug Fixes
 
 49. SOLR-589: Improved handling of badly formated query strings (Sean Timm via Otis Gospodnetic)
 
+50. SOLR-749: Allow QParser and ValueSourceParsers to be extended with same name (hossman, gsingers)
+
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
